2007-07-13  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #5913: RTEhtmlarea not correctly displayed in IRRE child form-fields and tabs (continuance of bug #5177)
	* Fixed bug #5948: IRRE - Parent record is not shown after saving the first time to a table on a TYPO3 system

2007-07-11  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #5331: Remove the caption wrap on images if no caption is set (thanks to Georg Ringer)
	* Fixed bug #5945: Missing right parenthesis in RTEhtmlarea user element module (thanks to Markus Lange)

2007-07-07  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #5053: imgNameNotRandom on TMENU/GMENU could break rollover behaviour (thanks to Ralf Hettinger)
	* Fixed bug #5048: JSMENU produces error if using baseurls (thanks to Jens Koester)

2007-07-06  Michael Stucki  <michael@typo3.org>

	* Fix in indexed search: List of indexed pages could be broken if mutli-byte chars are cut in the middle (patch by Karsten Dambekalns)
	* Fixed bug #5094: Record alt_label was not processed (patch by Volker Graubaum and Thomas Hempel)

2007-07-02  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #4623: Content encoding with x-gzip not possible in IE7
	* Fixed bug #5789: JS error in new content element wizard with a single item

2007-06-13  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #5778: Missleading comment in TCEmain::copyRecord_procBasedOnFieldType()

2007-06-08  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #5755: XCLASS inclusion part for class.t3lib_tceforms_inline.php is missing

2007-06-05  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #4226: New content elements wizard removes CE from array if tt_content_defValues property is zero

2007-05-23  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #5564: IRRE - foreign_selector/foreign_unique on click issue

2007-05-21  Dmitry Dulepov  <dmitry@typo3.org>

	* Added $GLOBALS['TYPO3_DB']->sql_free_result() to TCEmain::recordInfo() to avoid resource waste
